--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ version: '3'
 services:
   lf-web:
     restart: unless-stopped
-    ports:
-      - '8080:8080'
     volumes:
       - lf:/opt/lf/frontend/config
     #image: 'darkgigabyte/liquid-feedback-docker:latest'
@@ -29,6 +27,15 @@ services:
       - pg:/var/lib/postgresql/data
     env_file:
       - lf.env
+
+  caddy-proxy:
+    image: caddy
+    restart: unless-stopped
+    depends_on:
+      - lf-web
+    command: >
+      caddy reverse-proxy --from congresso.partito-pirata.it --to lf-web:8080
+    
 
 volumes:
   lf:
