--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,9 @@ services:
   caddy-proxy:
     image: caddy
     restart: unless-stopped
+    ports:
+      - 80:80
+      - 443:443
     depends_on:
       - lf-web
     command: >
