--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     ports:
       - 80:80
       - 443:443
+    volumes:
+      - caddy-certificates:/data
     depends_on:
       - lf-web
     command: >
@@ -43,3 +45,5 @@ services:
 volumes:
   lf:
   pg:
+  caddy-certificates:
+    external: true
